# matcha

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: train_model_test_cpu.toml  train_tokenizer.toml
src/matcha/: configs.py  optimizers.py  run.py  trainer.py  utils.py
src/matcha/components/: activations.py  blocks.py  embeddings.py  feedforward.py  linear.py  losses.py  metrics.py  normalization.py  utils.py
src/matcha/components/attention/: __init__.py  mha.py
src/matcha/components/embeddings/: __init__.py  positional.py
src/matcha/data/: dataloader.py
src/matcha/experiments/: __init__.py
src/matcha/models/: __init__.py
src/matcha/models/decoders/: __init__.py  decoder_lm.py
src/matcha/tokenizers/: __init__.py  bpe.py  bpe_trainer.py  trainer.py
tests/models/: test_transformerlm.py
