[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matcha"
version = "0.1.0"
description = "Implementations of language models from scratch"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "numpy<2",
    "python-dotenv>=1.1.1",
    "regex>=2024.11.6",
    "torch==2.2.2", # fixed for Intel Mac
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a11",
]


[tool.ruff]
fix = true
line-length = 88
unsafe-fixes = true

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "I",
    "UP"
]
extend-select = [
    "E501",
    "UP045"
]
ignore = [
    "E702"
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"